# SimpleLogger

./: CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  example.cpp  test.hpp
include/: Logger.hpp  test.hpp
src/: CMakeLists.txt  Logger.cpp  Logger.tpp  main.cpp
